# cambium

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  flake.nix
.githooks/: pre-commit
.github/workflows/: ci.yml
.moss/: index.sqlite
crates/cambium/: Cargo.toml
crates/cambium-cli/: Cargo.toml
crates/cambium-cli/src/: config.rs  errors.rs  expr.rs  main.rs
crates/cambium-cli/tests/: integration.rs
crates/cambium-cli/tests/data/: b64_input.txt
crates/cambium-serde/: Cargo.toml
crates/cambium-serde/src/: lib.rs
crates/cambium/src/: converter.rs  executor.rs  lib.rs  planner.rs
crates/paraphase-audio/: Cargo.toml
crates/paraphase-audio/src/: lib.rs
crates/paraphase-cli/: Cargo.toml
crates/paraphase-cli/src/: config.rs  errors.rs  expr.rs  main.rs
crates/paraphase-cli/tests/: integration.rs
crates/paraphase-cli/tests/data/: compress_test.json
crates/paraphase-core/: Cargo.toml
crates/paraphase-core/src/: executor.rs  lib.rs  pattern.rs  properties.rs  registry.rs  workflow.rs
crates/paraphase-image/: Cargo.toml
crates/paraphase-image/src/: lib.rs
crates/paraphase-plugin/: Cargo.toml
crates/paraphase-plugin/src/: lib.rs
crates/paraphase-serde/: Cargo.toml
crates/paraphase-serde/src/: lib.rs
crates/paraphase-video/: Cargo.toml
crates/paraphase-video/src/: lib.rs  transcode.rs
docs/: architecture-decisions.md  document-ir-spec.md  formats.md  index.md  open-questions.md  package.json  philosophy.md  quickstart.md  use-cases.md  workflow-api.md
docs/.vitepress/: config.ts
