[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/rhi-zone/paraphase"

[workspace.dependencies]
# Internal
rhi-paraphase-core = { path = "crates/paraphase-core" }
rhi-paraphase-plugin = { path = "crates/paraphase-plugin" }
rhi-paraphase-serde = { path = "crates/paraphase-serde" }
rhi-paraphase-image = { path = "crates/paraphase-image" }
rhi-paraphase-video = { path = "crates/paraphase-video" }
rhi-paraphase-audio = { path = "crates/paraphase-audio" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2"

# Collections
indexmap = { version = "2", features = ["serde"] }
