[package]
name = "cambium-cli"
description = "CLI for Cambium data transformation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cambium"
path = "src/main.rs"

[dependencies]
cambium.workspace = true
cambium-serde = { workspace = true, features = ["all"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
