[package]
name = "cambium-cli"
description = "CLI for Cambium data transformation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "cambium"
path = "src/main.rs"

[features]
default = ["serde", "image"]

# Converter backends
serde = ["dep:cambium-serde"]
image = ["dep:cambium-image", "dep:image"]
video = ["dep:cambium-video"]
audio = ["dep:cambium-audio"]

# Enable all formats in each backend
serde-all = ["serde", "cambium-serde/all"]
image-all = ["image", "cambium-image/all"]
video-all = ["video", "cambium-video/all"]
audio-all = ["audio", "cambium-audio/all"]

# Parallel execution (batch processing)
parallel = ["cambium/parallel"]

# Everything (video excluded from default, requires FFmpeg)
all = ["serde-all", "image-all", "video-all", "audio-all", "parallel"]

[dependencies]
cambium.workspace = true
cambium-serde = { workspace = true, optional = true }
cambium-image = { workspace = true, optional = true }
cambium-video = { workspace = true, optional = true }
cambium-audio = { workspace = true, optional = true }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.2"
indicatif = "0.17"
pure-magic = "0.1"
magic-db = "0.3"
anyhow = "1"
indexmap = "2"
image = { version = "0.25", default-features = false, optional = true }
