[package]
name = "rhi-paraphase-audio"
description = "Audio format converters for Paraphase (pure Rust)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["wav", "flac", "mp3", "ogg"]

# Formats (decode support)
wav = ["symphonia/wav", "symphonia/pcm"]
flac = ["symphonia/flac"]
mp3 = ["symphonia/mp3"]
ogg = ["symphonia/ogg", "symphonia/vorbis"]
aac = ["symphonia/aac", "symphonia/isomp4"]

# All formats
all = ["wav", "flac", "mp3", "ogg", "aac"]

[dependencies]
rhi-paraphase-core.workspace = true

# Decoding (pure Rust)
symphonia = { version = "0.5", default-features = false }

# WAV encoding (pure Rust)
hound = "3.5"
