[package]
name = "rhi-paraphase-serde"
description = "Serde-based format converters for Paraphase"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["json", "yaml", "toml"]

# ============================================
# TEXT FORMATS (human-readable)
# ============================================

# JSON - The ubiquitous data interchange format
json = ["dep:serde_json"]

# YAML - Human-friendly data serialization
yaml = ["dep:serde_yaml"]

# TOML - Tom's Obvious Minimal Language (config files)
toml = ["dep:toml"]

# RON - Rusty Object Notation
ron = ["dep:ron"]

# JSON5 - JSON with comments and trailing commas
json5 = ["dep:json5"]

# Hjson - Human JSON (comments, unquoted strings)
# hjson = ["dep:deser-hjson"]  # TODO: check compatibility

# XML - Extensible Markup Language
xml = ["dep:quick-xml"]

# S-expressions - Lisp-style data (lexpr)
lexpr = ["dep:serde-lexpr"]

# URL-encoded form data
urlencoded = ["dep:serde_urlencoded"]

# Query strings (more flexible than urlencoded)
qs = ["dep:serde_qs"]

# CSV - Comma-separated values (limited: arrays of flat objects)
csv = ["dep:csv"]

# NDJSON - Newline-delimited JSON (JSON Lines)
ndjson = ["dep:serde_json"]

# ============================================
# BINARY FORMATS (compact/efficient)
# ============================================

# MessagePack - Efficient binary JSON-like format
msgpack = ["dep:rmp-serde"]

# CBOR - Concise Binary Object Representation (RFC 8949)
cbor = ["dep:ciborium"]

# Bincode - Fast binary encoding
bincode = ["dep:bincode"]

# Postcard - Embedded-friendly binary format
postcard = ["dep:postcard"]

# BSON - Binary JSON (MongoDB)
bson = ["dep:bson"]

# FlexBuffers - Schemaless FlatBuffers
flexbuffers = ["dep:flexbuffers"]

# Bencode - BitTorrent encoding
bencode = ["dep:serde_bencode"]

# Pickle - Python's serialization format
pickle = ["dep:serde-pickle"]

# Property List - Apple's plist format
plist = ["dep:plist"]

# ============================================
# ENCODING FORMATS (byte representations)
# ============================================

# Base64 - Binary-to-text encoding
base64 = ["dep:base64"]

# Hex - Hexadecimal encoding
hex = ["dep:hex"]

# ============================================
# COMPRESSION FORMATS
# ============================================

# Gzip - Standard gzip compression
gzip = ["dep:flate2"]

# Zstd - Fast compression with good ratios
zstd = ["dep:zstd"]

# Brotli - Web-optimized compression
brotli = ["dep:brotli"]

# ============================================
# CONFIG FORMATS
# ============================================

# INI - Simple key-value config files
ini = ["dep:rust-ini"]

# ============================================
# TEXT TRANSFORMS
# ============================================

# Character encoding conversion (UTF-16, Latin-1, Shift-JIS, etc.)
charsets = ["dep:encoding_rs"]

# Markdown to HTML
markdown = ["dep:pulldown-cmark"]

# HTML to plain text
html2text = ["dep:html2text"]

# ============================================
# ARCHIVE FORMATS
# ============================================

# Tar archives
tar = ["dep:tar"]

# Zip archives
zip = ["dep:zip"]

# ============================================
# SPREADSHEET FORMATS
# ============================================

# Spreadsheet reading (XLSX, ODS, XLS, XLSB)
spreadsheet = ["dep:calamine", "dep:serde_json"]

# ============================================
# SCHEMA-BASED FORMATS (self-describing)
# ============================================

# Apache Avro - schema embedded in container files
avro = ["dep:apache-avro", "dep:serde_json"]

# Apache Parquet - columnar format with embedded schema
parquet = ["dep:parquet", "dep:arrow", "dep:bytes", "dep:serde_json"]

# All formats
all = [
    "json", "yaml", "toml", "ron", "json5", "xml", "lexpr",
    "urlencoded", "qs", "csv", "ndjson",
    "msgpack", "cbor", "bincode", "postcard", "bson",
    "flexbuffers", "bencode", "pickle", "plist",
    "base64", "hex",
    "gzip", "zstd", "brotli",
    "ini", "charsets", "markdown", "html2text",
    "tar", "zip",
    "spreadsheet",
    "avro",
    "parquet",
]

[dependencies]
rhi-paraphase-core.workspace = true
serde.workspace = true

# --- Text formats ---
serde_json = { workspace = true, optional = true }
serde_yaml = { version = "0.9", optional = true }
toml = { version = "0.9", optional = true }
ron = { version = "0.12", optional = true }
json5 = { version = "1.0", optional = true }
quick-xml = { version = "0.38", features = ["serialize"], optional = true }
serde-lexpr = { version = "0.1", optional = true }
serde_urlencoded = { version = "0.7", optional = true }
serde_qs = { version = "0.15", optional = true }
csv = { version = "1.3", optional = true }

# --- Binary formats ---
rmp-serde = { version = "1.3", optional = true }
ciborium = { version = "0.2", optional = true }
bincode = { version = "2.0", features = ["serde"], optional = true }
postcard = { version = "1.1", features = ["alloc"], optional = true }
bson = { version = "3.1", features = ["serde"], optional = true }
flexbuffers = { version = "25", optional = true }
serde_bencode = { version = "0.2", optional = true }
serde-pickle = { version = "1.1", optional = true }
plist = { version = "1.7", optional = true }

# --- Encoding formats ---
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }

# --- Compression ---
flate2 = { version = "1.1", optional = true }
zstd = { version = "0.13", optional = true }
brotli = { version = "7.0", optional = true }

# --- Config formats ---
rust-ini = { version = "0.21", optional = true }

# --- Text transforms ---
encoding_rs = { version = "0.8", optional = true }
pulldown-cmark = { version = "0.12", optional = true }
html2text = { version = "0.14", optional = true }

# --- Archive formats ---
tar = { version = "0.4", optional = true }
zip = { version = "2.2", optional = true }

# --- Spreadsheet formats ---
calamine = { version = "0.32", optional = true }

# --- Schema-based formats ---
apache-avro = { version = "0.21", optional = true }
parquet = { version = "57", optional = true }
arrow = { version = "57", optional = true }
bytes = { version = "1", optional = true }
